Fix collection name

--- a/notebooks/02_manual_RAG.ipynb
+++ b/notebooks/02_manual_RAG.ipynb
@@ -407,23 +407,23 @@
    "metadata": {},
    "source": [
     "### Create Collection\n",
-    "Create collection called `aws_docs` inside database and also delete the old one if exists. Cosine similarity is used as metric. "
+    "Create collection called `aws_docs_manual` inside database and also delete the old one if exists. Cosine similarity is used as metric. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "d384ac1d",
    "metadata": {},
    "outputs": [],
    "source": [
     "try:\n",
-    "    client.delete_collection(name='aws_docs')\n",
+    "    client.delete_collection(name='aws_docs_manual')\n",
     "except:\n",
     "    pass\n",
     "\n",
     "collection = client.create_collection(\n",
-    "    name = 'aws_docs',\n",
+    "    name = 'aws_docs_manual',\n",
     "    configuration = {'hnsw': {'space': 'cosine'}},\n",
     "    metadata = {'description': 'AWS VSTS documentation chunks'},\n",
     ")"
@@ -434,7 +434,7 @@
    "id": "e94e7583",
    "metadata": {},
    "source": [
-    "### Fill Collection\n",
+    "### Fill the Collection\n",
     "\n",
     "First, unpack ids, embeddings, text chunks and chunks metadata"
    ]
