--- a/notebooks/02_manual_RAG.ipynb
+++ b/notebooks/02_manual_RAG.ipynb
@@ -985,7 +985,7 @@
     "- embeddings for chunks\n",
     "- database to store embeddings and chunks\n",
     "- semantic search using cosine similarity \n",
-    "- clear amd well-structured prompt for LLMs\n",
+    "- clear and well-structured prompt for LLMs\n",
     "- complete manual RAG pipeline to generate accurate response without hallucination "
    ]
   }
