Add langchain_rag_pipeline function

--- a/notebooks/03_LangChain_RAG.ipynb
+++ b/notebooks/03_LangChain_RAG.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "755a9ed6",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "d6f98862",
    "metadata": {},
    "outputs": [
@@ -165,7 +165,7 @@
        "2         260         322       822  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "2295b153",
    "metadata": {},
    "outputs": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "14d312e2",
    "metadata": {},
    "outputs": [],
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "501b4962",
    "metadata": {},
    "outputs": [
@@ -260,14 +260,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "086a6dca",
    "metadata": {},
    "outputs": [],
    "source": [
     "documents = []\n",
     "\n",
-    "for idx, row in chunks.iterrows():\n",
+    "for _, row in chunks.iterrows():\n",
     "    doc = Document(\n",
     "        page_content=row['text'],\n",
     "        metadata={\n",
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "a179462a",
    "metadata": {},
    "outputs": [
@@ -301,7 +301,7 @@
        "Document(metadata={'chunk_id': 0, 'page_num': 1, 'char_count': 134, 'start_char': 0, 'end_char': 134}, page_content='User Guide AWS Toolkit for Microsoft Azure DevOps Copyright © 2025 Amazon Web Services, Inc. and/or its aﬃliates. All rights reserved.')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "2ae37079",
    "metadata": {},
    "outputs": [],
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "92a8a13f",
    "metadata": {},
    "outputs": [
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "3e3fd144",
    "metadata": {},
    "outputs": [
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "5f23e9d8",
    "metadata": {},
    "outputs": [],
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "047eb8a2",
    "metadata": {},
    "outputs": [],
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "5545e5eb",
    "metadata": {},
    "outputs": [
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "8d9d2dc3",
    "metadata": {},
    "outputs": [],
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "a475c086",
    "metadata": {},
    "outputs": [],
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "258be047",
    "metadata": {},
    "outputs": [],
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "a114879f",
    "metadata": {},
    "outputs": [],
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "14fff7b8",
    "metadata": {},
    "outputs": [
@@ -672,15 +672,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Based on the provided documentation, to create an AWS account if you do not have one:\n",
+      "Based on the provided documentation, if you do not have an AWS account, you should follow these steps:\n",
       "\n",
       "1. Open https://portal.aws.amazon.com/billing/signup\n",
-      "2. Follow the online instructions\n",
-      "3. As part of the sign-up procedure, you will receive a phone call or text message and need to enter a verification code on the phone keypad\n",
+      "2. Follow the online instructions provided on that page\n",
+      "3. As part of the sign-up procedure, you will receive a phone call or text message and will need to enter a verification code on your phone keypad\n",
       "\n",
-      "When you complete the sign-up process, an AWS account root user will be created, which has access to all AWS services and resources in the account.\n",
-      "\n",
-      "(Page 10)\n"
+      "When you complete the sign-up process, an AWS account root user will be created for you. This root user will have access to all AWS services and resources in your account (Page 10).\n"
      ]
     }
    ],
@@ -702,10 +700,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "b5da98cc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The provided documentation chunks do not contain any information about making pizza. These appear to be table of contents or index pages from AWS documentation that reference Synopsis, Description, and Parameters sections, but contain no content related to pizza preparation or cooking.\n",
+      "\n",
+      "This question cannot be answered using the provided context.\n"
+     ]
+    }
+   ],
    "source": [
     "query = 'How do I make a tasty pizza?'\n",
     "\n",
