--- a/notebooks/04_evaluation.ipynb
+++ b/notebooks/04_evaluation.ipynb
@@ -1,8 +1,83 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "56992a40",
+   "metadata": {},
+   "source": [
+    "### Clear memory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "0530cb22",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%reset -f\n",
+    "import gc\n",
+    "gc.collect()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc1a1e51",
+   "metadata": {},
+   "source": [
+    "### Import"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
+   "id": "09c093ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import sys, os\n",
+    "from sentence_transformers import SentenceTransformer\n",
+    "from chromadb import PersistentClient\n",
+    "from chromadb.config import Settings\n",
+    "from chromadb.api.models.Collection import Collection\n",
+    "from typing import Any, Dict\n",
+    "from anthropic import Anthropic\n",
+    "from dotenv import load_dotenv\n",
+    "from tqdm.auto import tqdm\n",
+    "import ragas\n",
+    "from datasets import Dataset\n",
+    "pd.set_option('display.max_columns', None)\n",
+    "pd.set_option('display.max_rows', None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2683d7c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore', category=DeprecationWarning)\n",
+    "warnings.filterwarnings('ignore', category=FutureWarning)\n",
+    "warnings.filterwarnings('ignore', category=UserWarning)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "8f055c83",
    "metadata": {},
    "outputs": [],
@@ -12,16 +87,303 @@
     "        'id': 0,\n",
     "        'question': 'How do I make a tasty pizza?',\n",
     "        'reference_answer': 'This question is not related to AWS documentation.',\n",
-    "        'page_numbers': [None],\n",
+    "        'page_numbers': [],\n",
     "        'category': 'irrelevant',\n",
+    "    },\n",
+    "    {\n",
+    "        'id': 1,\n",
+    "        'question': 'Who is the current president of USA?',\n",
+    "        'reference_answer': 'This question is not related to AWS documentation.',\n",
+    "        'page_numbers': [],\n",
+    "        'category': 'irrelevant',\n",
+    "    },\n",
+    "    {\n",
+    "        'id': 2,\n",
+    "        'question': 'What is the capital of Germany?',\n",
+    "        'reference_answer': 'This question is not related to AWS documentation.',\n",
+    "        'page_numbers': [],\n",
+    "        'category': 'irrelevant',\n",
+    "    },\n",
+    "    {\n",
+    "        'id': 3,\n",
+    "        'question': 'If I do not have an AWS account, what do I do?',\n",
+    "        'reference_answer': 'To sign up for an AWS account open https://portal.aws.amazon.com/billing/signup and follow the online instructions.',\n",
+    "        'page_numbers': [10],\n",
+    "        'category': 'relevant',\n",
+    "    },\n",
+    "    {\n",
+    "        'id': 4,\n",
+    "        'question': 'What if I want to allow people outside of my AWS account to access my AWS resources?',\n",
+    "        'reference_answer': 'You can create a role that users in other accounts or people outside of your organization can use to access your resources. You can specify who is trusted to assume the role. For services that support resource-based policies or access control lists (ACLs), you can use those policies to grant people access to your resources.',\n",
+    "        'page_numbers': [114],\n",
+    "        'category': 'relevant',\n",
+    "    },\n",
+    "    {\n",
+    "        'id': 5,\n",
+    "        'question': 'What is the AWS Toolkit for Microsoft Azure DevOps?',\n",
+    "        'reference_answer': 'AWS Toolkit for Microsoft Azure DevOps is an extension for Microsoft Azure DevOps that contains tasks you can use in build and release definitions to interact with AWS services. It is available through the Visual Studio Marketplace.',\n",
+    "        'page_numbers': [7],\n",
+    "        'category': 'relevant',\n",
+    "    },\n",
+    "    {\n",
+    "        'id': 6,\n",
+    "        'question': 'Where can I install the AWS Toolkit for Azure DevOps extension?',\n",
+    "        'reference_answer': 'You can install the AWS Toolkit for Azure DevOps extension from the Extensions for Azure DevOps Visual Studio Marketplace. The direct link is https://marketplace.visualstudio.com/items?itemName=AmazonWebServices.aws-vsts-tools',\n",
+    "        'page_numbers': [12],\n",
+    "        'category': 'relevant',\n",
+    "    },\n",
+    "    {\n",
+    "        'id': 7,\n",
+    "        'question': 'How many ways can I supply AWS credentials to tasks?',\n",
+    "        'reference_answer': 'You can supply credentials in four ways: using a service connection, through named variables in your build (AWS.AccessKeyID, AWS.SecretAccessKey, AWS.SessionToken), through standard AWS environment variables in the build agent process, or with Amazon EC2 build agents using instance metadata.',\n",
+    "        'page_numbers': [13, 14, 15],\n",
+    "        'category': 'relevant',\n",
+    "    },\n",
+    "    {\n",
+    "        'id': 8,\n",
+    "        'question': 'What permissions does AWS Send SNS or SQS Message task require?',\n",
+    "        'reference_answer': 'This task requires permissions to call the following AWS service APIs (depending on selected task options, not all APIs may be used): sns:GetTopicAttributes, sns:Publish, sqs:GetQueueAttributes and sqs:SendMessage.',\n",
+    "        'page_numbers': [95],\n",
+    "        'category': 'relevant',\n",
+    "    },\n",
+    "    {\n",
+    "        'id': 9,\n",
+    "        'question': 'Which deployment types does the AWS Lambda .NET Core task support?',\n",
+    "        'reference_answer': 'The task supports two deployment types: Function (deploys a single function or creates a package zip file) and Serverless Application (performs deployment using AWS CloudFormation for multiple functions or builds and uploads to S3).',\n",
+    "        'page_numbers': [76,77],\n",
+    "        'category': 'relevant',\n",
+    "    },\n",
+    "    {\n",
+    "        'id': 10,\n",
+    "        'question': 'What structure does AWS CLI use?',\n",
+    "        'reference_answer': 'The AWS CLI uses a multipart structure on the command line: <command> <subcommand> [options and parameters].',\n",
+    "        'page_numbers': [33,34],\n",
+    "        'category': 'relevant',\n",
+    "    },\n",
+    "    {\n",
+    "        'id': 11,\n",
+    "        'question': 'Can I create an S3 bucket automatically with the S3 Upload task?',\n",
+    "        'reference_answer': 'Yes, you can select the checkbox \"Create S3 bucket if it does not exist\" and the task will attempt to create the bucket if it does not exist. Note that bucket names must be globally unique.',\n",
+    "        'page_numbers': [79],\n",
+    "        'category': 'relevant',\n",
+    "    },\n",
+    "    {\n",
+    "        'id': 12,\n",
+    "        'question': 'What is the maximum timeout value for the AWS CodeDeploy deployment task?',\n",
+    "        'reference_answer': 'The default maximum timeout is 60 minutes.',\n",
+    "        'page_numbers': [56],\n",
+    "        'category': 'relevant',\n",
+    "    },\n",
+    "    {\n",
+    "        'id': 13,\n",
+    "        'question': 'What AWS Shell Script task is used for?',\n",
+    "        'reference_answer': 'Runs a shell script in Bash, setting AWS credentials and Region information into the shell environment using the standard environment keys AWS_ACCESS_KEY_ID, AWS_SECRET_ACCESS_KEY, AWS_SESSION_TOKEN and AWS_REGION.',\n",
+    "        'page_numbers': [39],\n",
+    "        'category': 'relevant',\n",
+    "    },\n",
+    "    {\n",
+    "        'id': 14,\n",
+    "        'question': 'Which task should I use to push a Docker image to Amazon ECR?',\n",
+    "        'reference_answer': 'You should use the Amazon ECR Push task (also known as Amazon Elastic Container Registry Push Image Task). This task pushes a Docker image identified by name with optional tag, or image ID to ECR.',\n",
+    "        'page_numbers': [51],\n",
+    "        'category': 'relevant',\n",
     "    },\n",
     "]\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f74b172e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Created 15 test questions\n",
+      "📊 Relevant: 12\n",
+      "📊 Irrelevant: 3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>question</th>\n",
+       "      <th>reference_answer</th>\n",
+       "      <th>page_numbers</th>\n",
+       "      <th>category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>How do I make a tasty pizza?</td>\n",
+       "      <td>This question is not related to AWS documentat...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>irrelevant</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Who is the current president of USA?</td>\n",
+       "      <td>This question is not related to AWS documentat...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>irrelevant</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>What is the capital of Germany?</td>\n",
+       "      <td>This question is not related to AWS documentat...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>irrelevant</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>If I do not have an AWS account, what do I do?</td>\n",
+       "      <td>To sign up for an AWS account open https://por...</td>\n",
+       "      <td>[10]</td>\n",
+       "      <td>relevant</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>What if I want to allow people outside of my A...</td>\n",
+       "      <td>You can create a role that users in other acco...</td>\n",
+       "      <td>[114]</td>\n",
+       "      <td>relevant</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id                                           question  \\\n",
+       "0   0                       How do I make a tasty pizza?   \n",
+       "1   1               Who is the current president of USA?   \n",
+       "2   2                    What is the capital of Germany?   \n",
+       "3   3     If I do not have an AWS account, what do I do?   \n",
+       "4   4  What if I want to allow people outside of my A...   \n",
+       "\n",
+       "                                    reference_answer page_numbers    category  \n",
+       "0  This question is not related to AWS documentat...           []  irrelevant  \n",
+       "1  This question is not related to AWS documentat...           []  irrelevant  \n",
+       "2  This question is not related to AWS documentat...           []  irrelevant  \n",
+       "3  To sign up for an AWS account open https://por...         [10]    relevant  \n",
+       "4  You can create a role that users in other acco...        [114]    relevant  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_df = pd.DataFrame(test_dataset)\n",
+    "\n",
+    "print(f'✅ Created {len(test_df)} test questions')\n",
+    "print(f'📊 Relevant: {(test_df[\"category\"] == \"relevant\").sum()}')\n",
+    "print(f'📊 Irrelevant: {(test_df[\"category\"] == \"irrelevant\").sum()}')\n",
+    "\n",
+    "test_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db744b84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run all test questions through RAG pipeline\n",
+    "results = []\n",
+    "\n",
+    "for idx, row in tqdm(test_df.iterrows(), total=len(test_df), desc='Running RAG'):\n",
+    "    question = row['question']\n",
+    "\n",
+    "    # Get RAG response\n",
+    "    rag_result = rag_pipeline(\n",
+    "        query=question,\n",
+    "        embedding_model=model,\n",
+    "        collection=collection,\n",
+    "        n_results=5,\n",
+    "    )\n",
+    "\n",
+    "    # Extract retrieved contexts\n",
+    "    contexts = [doc for doc in rag_result['search_results']['documents'][0]]\n",
+    "\n",
+    "    results.append({\n",
+    "        'question': question,\n",
+    "        'answer': rag_result['answer'],\n",
+    "        'contexts': contexts,\n",
+    "        'ground_truth': row['reference_answer'],\n",
+    "    })\n",
+    "\n",
+    "# Convert to DataFrame\n",
+    "eval_df = pd.DataFrame(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34dbbf64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "# Convert to HuggingFace Dataset format (required by RAGAS)\n",
+    "ragas_dataset = Dataset.from_pandas(eval_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ad602e1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "rag",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
