--- a/notebooks/03_LangChain_RAG.ipynb
+++ b/notebooks/03_LangChain_RAG.ipynb
@@ -47,21 +47,18 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import chromadb\n",
-    "from langchain_huggingface import HuggingFaceEmbeddings\n",
+    "import os, torch, chromadb\n",
     "from langchain_chroma import Chroma\n",
+    "from langchain_huggingface import HuggingFaceEmbeddings\n",
     "from langchain_core.documents import Document\n",
-    "from langchain_core.prompts import PromptTemplate\n",
-    "import torch\n",
+    "from dotenv import load_dotenv\n",
     "from langchain_anthropic import ChatAnthropic\n",
+    "from langchain_core.prompts import PromptTemplate\n",
     "from langchain_core.runnables import RunnablePassthrough, RunnableParallel\n",
     "from langchain_core.output_parsers import StrOutputParser\n",
-    "import os\n",
-    "from dotenv import load_dotenv\n",
     "pd.set_option('display.max_columns', None)\n",
     "pd.set_option('display.max_rows', None)\n",
-    "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
-    "%matplotlib inline"
+    "device = 'cuda' if torch.cuda.is_available() else 'cpu'"
    ]
   },
   {
@@ -672,13 +669,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Based on the provided documentation, if you do not have an AWS account, you should follow these steps:\n",
+      "To create an AWS account if you do not have one, follow these steps according to the documentation (Page 10):\n",
       "\n",
       "1. Open https://portal.aws.amazon.com/billing/signup\n",
-      "2. Follow the online instructions provided on that page\n",
-      "3. As part of the sign-up procedure, you will receive a phone call or text message and will need to enter a verification code on your phone keypad\n",
+      "2. Follow the online instructions\n",
+      "3. Complete the verification process, which involves receiving a phone call or text message and entering a verification code on the phone keypad\n",
       "\n",
-      "When you complete the sign-up process, an AWS account root user will be created for you. This root user will have access to all AWS services and resources in your account (Page 10).\n"
+      "When you complete the sign-up procedure, an AWS account root user will be created. This root user will have access to all AWS services and resources in the account.\n"
      ]
     }
    ],
@@ -708,9 +705,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The provided documentation chunks do not contain any information about making pizza. These appear to be table of contents or index pages from AWS documentation that reference Synopsis, Description, and Parameters sections, but contain no content related to pizza preparation or cooking.\n",
+      "The provided documentation chunks do not contain any information about making pizza. These chunks appear to be table of contents or index entries from AWS documentation, containing only references to Synopsis, Description, and Parameters sections.\n",
       "\n",
-      "This question cannot be answered using the provided context.\n"
+      "This question cannot be answered using the provided context, as the documentation is related to AWS services and does not cover pizza recipes or cooking instructions.\n"
      ]
     }
    ],
@@ -756,7 +753,8 @@
     "| Maintenance    | More effort           | Framework updates |\n",
     "| Best use case  | Research and learning | Fast prototyping  |\n",
     "\n",
-    "\n"
+    "## Future Steps\n",
+    "For future tests, the pipeline and the database setup were put into Python module. There is no need to use this notebook alongside. \n"
    ]
   }
  ],
