--- a/notebooks/04_evaluation.ipynb
+++ b/notebooks/04_evaluation.ipynb
@@ -965,6 +965,8 @@
     "   - Context Precision - quality of retrieved chunks\n",
     "   - Context Recall - coverage of relevant information\n",
     "\n",
+    "The Claude Sonnet 4.5 was chosen as a supervisor LLM. \n",
+    "\n",
     "3. Tested 3 chunking strategies (200, 500, 1000 char chunks)\n",
     "\n",
     "**Key Findings:**\n",
