Fix gitignore and add final chunks

--- a/notebooks/05_deployment.ipynb
+++ b/notebooks/05_deployment.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a191b56e",
    "metadata": {},
    "outputs": [
@@ -20,8 +20,9 @@
        "0"
       ]
      },
+     "execution_count": 1,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -40,25 +41,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ef35d981",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "from pathlib import Path\n",
+    "import uvicorn, nest_asyncio, sys\n",
     "from pydantic import BaseModel, Field\n",
-    "import uvicorn, nest_asyncio\n",
     "from fastapi import FastAPI, HTTPException, UploadFile, File, Form\n",
     "from fastapi.middleware.cors import CORSMiddleware\n",
     "from typing import List, Tuple, Dict, Optional, Any, Union\n",
     "pd.set_option('display.max_columns', None)\n",
-    "pd.set_option('display.max_rows', None)\n",
-    "%matplotlib inline"
+    "pd.set_option('display.max_rows', None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "93c7f466",
    "metadata": {},
    "outputs": [],
@@ -71,10 +72,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f1f813c7",
+   "execution_count": 4,
+   "id": "3f6de469",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "sys.path.append('..')\n",
+    "from src.data_utils import download_file, load_and_analyze_pdf, create_chunks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a827a52",
+   "metadata": {},
+   "source": [
+    "# Data Preparation \n",
+    "### Download PDF Document and Load to DataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f1f813c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File aws_vsts.pdf already exists\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b78df5fb55b1456f9f6d9c9c45fe0215",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Extracting pages:   0%|          | 0/118 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filename: aws_vsts.pdf\n",
+      "Title: AWS Toolkit for Microsoft Azure DevOps - User Guide\n",
+      "Author: \n",
+      "Subject: \n",
+      "File size: 1.30 MB\n",
+      "Number of pages: 118\n",
+      "Total number of chars: 195058\n",
+      "\n",
+      "Describe char distribution\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "count     118.000000\n",
+       "mean     1653.033898\n",
+       "std       875.753907\n",
+       "min        89.000000\n",
+       "25%      1325.250000\n",
+       "50%      1621.500000\n",
+       "75%      1942.750000\n",
+       "max      5605.000000\n",
+       "Name: char_count, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "PDF_URL = 'https://docs.aws.amazon.com/pdfs/vsts/latest/userguide/vsts-ug.pdf'\n",
+    "\n",
+    "PDF_NAME = 'aws_vsts.pdf'\n",
+    "\n",
+    "download_file(url=PDF_URL, name=PDF_NAME, overwrite=False)\n",
+    "\n",
+    "PDF_PATH = Path('../data/raw/') / PDF_NAME\n",
+    "\n",
+    "df = load_and_analyze_pdf(PDF_PATH)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3cec2d3",
+   "metadata": {},
+   "source": [
+    "### Create Chunks with the Best Configuration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "30a3b7e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2c15f3cff4584ff390cbf563c9965070",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Chunking:   0%|          | 0/118 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of chunks: 300\n"
+     ]
+    }
+   ],
+   "source": [
+    "chunks = create_chunks(df, chunk_size=1000, overlap=200, EOS=100)\n",
+    "\n",
+    "chunks.to_json(\n",
+    "    path_or_buf='../data/processed/final_chunks.json',\n",
+    "    orient='records',\n",
+    "    force_ascii=False,\n",
+    "    indent=4\n",
+    ")\n",
+    "\n",
+    "print(f'Number of chunks: {len(chunks)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "552376be",
+   "metadata": {},
    "source": []
   }
  ],
@@ -85,7 +225,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.12"
   }
  },
