--- a/notebooks/05_deployment.ipynb
+++ b/notebooks/05_deployment.ipynb
@@ -46,15 +46,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "from pathlib import Path\n",
-    "import uvicorn, nest_asyncio, sys\n",
+    "from datetime import datetime\n",
+    "import uvicorn, nest_asyncio, sys, torch\n",
     "from pydantic import BaseModel, Field\n",
-    "from fastapi import FastAPI, HTTPException, UploadFile, File, Form\n",
+    "from fastapi import FastAPI, HTTPException\n",
     "from fastapi.middleware.cors import CORSMiddleware\n",
-    "from typing import List, Tuple, Dict, Optional, Any, Union\n",
-    "pd.set_option('display.max_columns', None)\n",
-    "pd.set_option('display.max_rows', None)"
+    "from contextlib import asynccontextmanager\n",
+    "device = 'cuda' if torch.cuda.is_available() else 'cpu'"
    ]
   },
   {
@@ -64,10 +63,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import warnings\n",
+    "import warnings, logging\n",
     "warnings.filterwarnings('ignore', category=DeprecationWarning)\n",
     "warnings.filterwarnings('ignore', category=FutureWarning)\n",
-    "warnings.filterwarnings('ignore', category=UserWarning)"
+    "warnings.filterwarnings('ignore', category=UserWarning)\n",
+    "logging.getLogger('chromadb').setLevel(logging.WARNING)\n",
+    "logging.getLogger('sentence_transformers').setLevel(logging.WARNING)"
    ]
   },
   {
@@ -78,7 +79,8 @@
    "outputs": [],
    "source": [
     "sys.path.append('..')\n",
-    "from src.data_utils import download_file, load_and_analyze_pdf, create_chunks"
+    "from src.data_utils import download_file, load_and_analyze_pdf, create_chunks\n",
+    "from src.langchain_RAG import setup_data_collection, langchain_rag_pipeline"
    ]
   },
   {
@@ -106,7 +108,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b78df5fb55b1456f9f6d9c9c45fe0215",
+       "model_id": "e00ee9a466a546c3bb54fddd0e048901",
        "version_major": 2,
        "version_minor": 0
       },
@@ -179,7 +181,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2c15f3cff4584ff390cbf563c9965070",
+       "model_id": "0498f0a1d7b04d5ca125f17ade782278",
        "version_major": 2,
        "version_minor": 0
       },
@@ -205,7 +207,7 @@
     "    path_or_buf='../data/processed/final_chunks.json',\n",
     "    orient='records',\n",
     "    force_ascii=False,\n",
-    "    indent=4\n",
+    "    indent=4,\n",
     ")\n",
     "\n",
     "print(f'Number of chunks: {len(chunks)}')"
@@ -215,7 +217,437 @@
    "cell_type": "markdown",
    "id": "552376be",
    "metadata": {},
-   "source": []
+   "source": [
+    "# API Development\n",
+    "## Logging Configuration\n",
+    "Establish structured logging for API operations to enable monitoring, debugging, and audit trails in production deployments."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "d6fae6fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logging.basicConfig(level=logging.INFO)\n",
+    "api_logger = logging.getLogger('rag_api')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7fdcf42",
+   "metadata": {},
+   "source": [
+    "## Define API Data Models\n",
+    "\n",
+    "We use Pydantic for request/response validation and automatic API documentation. Each model defines the structure and constraints for API endpoints.\n",
+    "\n",
+    "### Health Check Response Model\n",
+    "\n",
+    "The `/health` endpoint returns system status and database information."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "fb243be7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class HealthResponse(BaseModel):\n",
+    "    \"\"\"Response model for health check endpoint.\"\"\"\n",
+    "    status: str = Field(..., description='Service status (healthy/unhealthy)')\n",
+    "    timestamp: str = Field(..., description='Health check timestamp (ISO format)')\n",
+    "    vectorstore_loaded: bool = Field(..., description='Whether vector database is loaded')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "667e207a",
+   "metadata": {},
+   "source": [
+    "### Query Response Model\n",
+    "\n",
+    "The `/query` endpoint returns the generated answer with source references."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e5833550",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class QueryResponse(BaseModel):\n",
+    "    \"\"\"Response model for RAG query endpoint.\"\"\"\n",
+    "    timestamp: str = Field(..., description='Response timestamp (ISO format)')\n",
+    "    question: str = Field(..., description='Original user question')\n",
+    "    answer: str = Field(..., description='Generated answer from RAG pipeline')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c2d9397",
+   "metadata": {},
+   "source": [
+    "### Query Request Model\n",
+    "The `/query` endpoint receives a string query. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "7fe14f57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class QueryRequest(BaseModel):\n",
+    "    \"\"\"Request model for RAG query endpoint.\"\"\"\n",
+    "    question: str = Field(\n",
+    "        ...,\n",
+    "        description='User question about AWS documentation',\n",
+    "        min_length=5,\n",
+    "        max_length=500,\n",
+    "        examples=['How do I create an AWS account?'],\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0023f9c",
+   "metadata": {},
+   "source": [
+    "## FastAPI Application Configuration\n",
+    "Configure the FastAPI application with proper lifecycle management, documentation, and middleware for production deployment.\n",
+    "### Application Lifecycle Management\n",
+    "Implement proper startup and shutdown procedures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "2d924c80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@asynccontextmanager\n",
+    "async def lifespan(_app: FastAPI):\n",
+    "    global vectorstore\n",
+    "    try:\n",
+    "        api_logger.info('Establishing vector database...')\n",
+    "        vectorstore = setup_data_collection(\n",
+    "            chunks_filename='final_chunks',\n",
+    "            collection_name='aws_docs_final',\n",
+    "            overwrite=True,\n",
+    "            device=device,\n",
+    "        )\n",
+    "        api_logger.info('Vector database initialized successfully')\n",
+    "    except Exception as e:\n",
+    "        api_logger.error(f'Failed to initialize vector database: {str(e)}')\n",
+    "        raise e\n",
+    "\n",
+    "    yield\n",
+    "    api_logger.info('Shutting down...')\n",
+    "    vectorstore = None\n",
+    "\n",
+    "vectorstore = None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d70decb",
+   "metadata": {},
+   "source": [
+    "### Run FastAPI Application"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "4f13751e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "app = FastAPI(\n",
+    "    title='Industrial RAG Agent API',\n",
+    "    description='RAG',\n",
+    "    version='1.0.0',\n",
+    "    docs_url='/docs',\n",
+    "    redoc_url='/redoc',\n",
+    "    lifespan=lifespan,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a43512b",
+   "metadata": {},
+   "source": [
+    "### CORS Configuration for Development"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e81dc1e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "app.add_middleware(\n",
+    "    CORSMiddleware,\n",
+    "    allow_origins=['*'],  # in production this must be specified\n",
+    "    allow_credentials=True,\n",
+    "    allow_methods=['GET', 'POST'],\n",
+    "    allow_headers=['*'],\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5230010a",
+   "metadata": {},
+   "source": [
+    "## API Endpoint Implementation\n",
+    "Complete set of RESTful endpoints \n",
+    "### Health Monitoring Endpoint (`GET /health`)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "12f971d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@app.get('/health', response_model=HealthResponse)\n",
+    "async def health_check():\n",
+    "    \"\"\"Provides system health status and vector database availability.\"\"\"\n",
+    "    try:\n",
+    "        vectorstore_loaded = vectorstore is not None\n",
+    "\n",
+    "        if vectorstore_loaded:\n",
+    "            overall_status = 'healthy'\n",
+    "        else:\n",
+    "            overall_status = 'degraded'\n",
+    "\n",
+    "        return HealthResponse(\n",
+    "            status=overall_status,\n",
+    "            timestamp=datetime.now().isoformat(),\n",
+    "            vectorstore_loaded=vectorstore_loaded,\n",
+    "        )\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        api_logger.error(f'Health check failed: {str(e)}')\n",
+    "        return HealthResponse(\n",
+    "            status='unhealthy',\n",
+    "            timestamp=datetime.now().isoformat(),\n",
+    "            vectorstore_loaded=False,\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b033b6fb",
+   "metadata": {},
+   "source": [
+    "### Primary RAG Query Endpoint (`POST /query`)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "11888fe6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@app.post('/query', response_model=QueryResponse)\n",
+    "async def query_rag(q:QueryRequest):\n",
+    "    \"\"\"Processes user question through RAG pipeline and returns generated answer.\"\"\"\n",
+    "    start_time = datetime.now()\n",
+    "\n",
+    "    try:\n",
+    "        result = langchain_rag_pipeline(q.question, vectorstore)\n",
+    "\n",
+    "        response = QueryResponse(\n",
+    "            timestamp=datetime.now().isoformat(),\n",
+    "            question=q.question,\n",
+    "            answer=result['answer'],\n",
+    "        )\n",
+    "\n",
+    "        processing_time = (datetime.now() - start_time).total_seconds() * 1000\n",
+    "\n",
+    "        api_logger.info(f'Completed successfully in {processing_time:.2f}ms')\n",
+    "        return response\n",
+    "\n",
+    "    except HTTPException:\n",
+    "        raise\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        api_logger.error(f'Unexpected error: {str(e)}')\n",
+    "        raise HTTPException(status_code=500, detail=f'Failed: {str(e)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ed48770",
+   "metadata": {},
+   "source": [
+    "### API Discovery Endpoint (`GET /`)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "90a58aa1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@app.get('/')\n",
+    "async def root():\n",
+    "    \"\"\"Root endpoint providing API overview and available endpoints.\"\"\"\n",
+    "    r = {\n",
+    "        'message': 'RAG API Server',\n",
+    "        'version': '1.0.0',\n",
+    "        'documentation': '/docs',\n",
+    "        'health': '/health',\n",
+    "        'input_format': 'String Query',\n",
+    "        'endpoints': {\n",
+    "            'query': 'POST /query - Generate answers using RAG pipeline',\n",
+    "            'health': 'GET /health - Service health check',\n",
+    "        }\n",
+    "    }\n",
+    "    return r"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f74ea2b6",
+   "metadata": {},
+   "source": [
+    "## Server Configuration and Testing\n",
+    "Configure and launch the FastAPI server for local development and testing.\n",
+    "\n",
+    "### Server Configuration Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "804192b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_api_server(app, host: str = '127.0.0.1', port: int = 8000, reload: bool = False):\n",
+    "    print(f'Starting RAG API server...')\n",
+    "\n",
+    "    uvicorn.run(\n",
+    "        app=app,\n",
+    "        host=host,\n",
+    "        port=port,\n",
+    "        reload=reload,\n",
+    "        log_level='info',\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25dc81b0",
+   "metadata": {},
+   "source": [
+    "### Development Server Launch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "d09f69e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting RAG API server...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:     Started server process [10612]\n",
+      "INFO:     Waiting for application startup.\n",
+      "INFO:rag_api:Establishing vector database...\n",
+      "INFO:rag_api:Vector database initialized successfully\n",
+      "INFO:     Application startup complete.\n",
+      "INFO:     Uvicorn running on http://127.0.0.1:8000 (Press CTRL+C to quit)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:     127.0.0.1:64695 - \"GET / HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:64696 - \"GET /docs HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:64696 - \"GET /openapi.json HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:64696 - \"GET / HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:64706 - \"GET /health HTTP/1.1\" 200 OK\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:httpx:HTTP Request: POST https://api.anthropic.com/v1/messages \"HTTP/1.1 200 OK\"\n",
+      "INFO:rag_api:Completed successfully in 2161.65ms\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:     127.0.0.1:64782 - \"POST /query HTTP/1.1\" 200 OK\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:httpx:HTTP Request: POST https://api.anthropic.com/v1/messages \"HTTP/1.1 200 OK\"\n",
+      "INFO:rag_api:Completed successfully in 1593.45ms\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:     127.0.0.1:64839 - \"POST /query HTTP/1.1\" 200 OK\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:     Shutting down\n",
+      "INFO:     Waiting for application shutdown.\n",
+      "INFO:rag_api:Shutting down...\n",
+      "INFO:     Application shutdown complete.\n",
+      "INFO:     Finished server process [10612]\n"
+     ]
+    }
+   ],
+   "source": [
+    "nest_asyncio.apply()\n",
+    "run_api_server(app)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3ca45fe",
+   "metadata": {},
+   "source": [
+    "Everything works as expected! "
+   ]
   }
  ],
  "metadata": {
