--- a/notebooks/05_deployment.ipynb
+++ b/notebooks/05_deployment.ipynb
@@ -264,30 +264,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "667e207a",
-   "metadata": {},
-   "source": [
-    "### Query Response Model\n",
-    "\n",
-    "The `/query` endpoint returns the generated answer with source references."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "e5833550",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class QueryResponse(BaseModel):\n",
-    "    \"\"\"Response model for RAG query endpoint.\"\"\"\n",
-    "    timestamp: str = Field(..., description='Response timestamp (ISO format)')\n",
-    "    question: str = Field(..., description='Original user question')\n",
-    "    answer: str = Field(..., description='Generated answer from RAG pipeline')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "0c2d9397",
    "metadata": {},
    "source": [
@@ -311,6 +287,30 @@
     "        max_length=500,\n",
     "        examples=['How do I create an AWS account?'],\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "667e207a",
+   "metadata": {},
+   "source": [
+    "### Query Response Model\n",
+    "\n",
+    "The `/query` endpoint returns the generated answer with source references."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e5833550",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class QueryResponse(BaseModel):\n",
+    "    \"\"\"Response model for RAG query endpoint.\"\"\"\n",
+    "    timestamp: str = Field(..., description='Response timestamp (ISO format)')\n",
+    "    question: str = Field(..., description='Original user question')\n",
+    "    answer: str = Field(..., description='Generated answer from RAG pipeline')"
    ]
   },
   {
@@ -647,6 +647,16 @@
    "metadata": {},
    "source": [
     "Everything works as expected! "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa427406",
+   "metadata": {},
+   "source": [
+    "# Summary\n",
+    "\n",
+    "This notebook demonstrated the successful transformation of a RAG pipeline using LangChain into a REST API service. The necessary *Pydantic* models have been created to validate the input and output data. The service has been successfully tested. "
    ]
   }
  ],
